--- a/shymru.html
+++ b/shymru.html
@@ -169,6 +169,13 @@ text-decoration: none
 <!--<![endif]-->
 <table class="t14" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t13"><p class="t12" style="margin:0;Margin:0;font-family:Open Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:25px;font-weight:400;font-style:normal;font-size:15px;text-decoration:none;text-transform:none;letter-spacing:-0.1px;direction:ltr;color:#FFFFFF;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">Это ваш входной билет, пожалуйста, не удаляйте это письмо. QR-код нужно предъявить на входе для участия в розыгрыше ценных призов!</p></td></tr></table>
 </td></tr></table>
+
+<table><tr>
+    <td align="center">
+        <img src="qrcode.png" alt="Description of image" width="300" height="auto" style="display:block; max-width:100%; border:0; margin-top:20px;">
+    </td>
+</tr></table>
+  
 </td></tr><tr><td align="center">
 <table class="t21" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr>
 <!--[if mso]>
