--- a/shymru.html
+++ b/shymru.html
@@ -110,7 +110,7 @@ text-decoration: none
 </style>
 <style type="text/css">
 @media (max-width: 480px) {
-.t22,.t27{mso-line-height-alt:0px!important;line-height:0!important;display:none!important}.t23{padding:40px!important}.t25{border-radius:0!important}
+.t29,.t34{mso-line-height-alt:0px!important;line-height:0!important;display:none!important}.t30{padding:40px!important}.t32{border-radius:0!important}
 }
 </style>
 <!--[if !mso]>-->
@@ -125,68 +125,71 @@ text-decoration: none
 </xml>
 <![endif]-->
 </head>
-<body id="body" class="t30" style="min-width:100%;Margin:0px;padding:0px;background-color:#FFFFFF;"><div class="t29" style="background-color:#FFFFFF;"><table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" align="center"><tr><td class="t28" style="font-size:0;line-height:0;mso-line-height-rule:exactly;background-color:#FFFFFF;" valign="top" align="center">
+<body id="body" class="t37" style="min-width:100%;Margin:0px;padding:0px;background-color:#FFFFFF;"><div class="t36" style="background-color:#FFFFFF;"><table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" align="center"><tr><td class="t35" style="font-size:0;line-height:0;mso-line-height-rule:exactly;background-color:#FFFFFF;" valign="top" align="center">
 <!--[if mso]>
 <v:background xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false">
 <v:fill color="#FFFFFF"/>
 </v:background>
 <![endif]-->
-<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" align="center" id="innerTable"><tr><td><div class="t22" style="mso-line-height-rule:exactly;mso-line-height-alt:50px;line-height:50px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr><tr><td align="center">
-<table class="t26" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr>
+<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" align="center" id="innerTable"><tr><td><div class="t29" style="mso-line-height-rule:exactly;mso-line-height-alt:50px;line-height:50px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr><tr><td align="center">
+<table class="t33" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr>
 <!--[if mso]>
-<td width="600" class="t25" style="background-color:#0666EB;border:3px solid #EBEBEB;overflow:hidden;width:600px;border-radius:3px 3px 3px 3px;">
+<td width="600" class="t32" style="background-color:#FFFFFF;background-image:url(https://87f3bdc0-298e-45d7-976a-51ab551248e4.b-cdn.net/e/6f404393-f3c5-4f73-b0d4-b6ef38383df4/fa05a6f6-1e85-409f-aadb-5328a3515b91.png);background-repeat:repeat;background-size:cover;background-position:center center;border:1px solid #EBEBEB;overflow:hidden;width:600px;border-radius:3px 3px 3px 3px;">
 <![endif]-->
 <!--[if !mso]>-->
-<td class="t25" style="background-color:#0666EB;border:3px solid #EBEBEB;overflow:hidden;width:600px;border-radius:3px 3px 3px 3px;">
+<td class="t32" style="background-color:#FFFFFF;background-image:url(https://87f3bdc0-298e-45d7-976a-51ab551248e4.b-cdn.net/e/6f404393-f3c5-4f73-b0d4-b6ef38383df4/fa05a6f6-1e85-409f-aadb-5328a3515b91.png);background-repeat:repeat;background-size:cover;background-position:center center;border:1px solid #EBEBEB;overflow:hidden;width:600px;border-radius:3px 3px 3px 3px;">
 <!--<![endif]-->
-<table class="t24" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t23" style="padding:44px 42px 32px 42px;"><table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="width:100% !important;"><tr><td align="left">
-<table class="t4" role="presentation" cellpadding="0" cellspacing="0" style="Margin-right:auto;"><tr>
+<table class="t31" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t30" style="padding:44px 42px 32px 42px;"><table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="width:100% !important;"><tr><td align="center">
+<table class="t4" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr>
 <!--[if mso]>
-<td width="136" class="t3" style="width:136px;">
+<td width="250" class="t3" style="width:250px;">
 <![endif]-->
 <!--[if !mso]>-->
-<td class="t3" style="width:136px;">
+<td class="t3" style="width:250px;">
 <!--<![endif]-->
-<table class="t2" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t1"><div style="font-size:0px;"><img class="t0" style="display:block;border:0;height:auto;width:100%;Margin:0;max-width:100%;" width="136" height="51.890625" alt="" src="logo.png"/></div></td></tr></table>
+<table class="t2" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t1"><div style="font-size:0px;"><img class="t0" style="display:block;border:0;height:auto;width:100%;Margin:0;max-width:100%;" width="250" height="95.40625" alt="" src="logo2.png"/></div></td></tr></table>
 </td></tr></table>
 </td></tr><tr><td><div class="t5" style="mso-line-height-rule:exactly;mso-line-height-alt:42px;line-height:42px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr><tr><td align="center">
 <table class="t10" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr>
 <!--[if mso]>
-<td width="510" class="t9" style="border-bottom:1px solid #EFF1F4;width:600px;">
+<td width="514" class="t9" style="border-bottom:1px solid #EFF1F4;width:600px;">
 <![endif]-->
 <!--[if !mso]>-->
 <td class="t9" style="border-bottom:1px solid #EFF1F4;width:600px;">
 <!--<![endif]-->
-<table class="t8" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t7" style="padding:0 0 18px 0;"><h1 class="t6" style="margin:0;Margin:0;font-family:Montserrat,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:28px;font-weight:700;font-style:normal;font-size:24px;text-decoration:none;text-transform:none;letter-spacing:-1px;direction:ltr;color:#FFFFFF;text-align:left;mso-line-height-rule:exactly;mso-text-raise:1px;">Спасибо за регистрацию</h1></td></tr></table>
+<table class="t8" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t7" style="padding:0 0 18px 0;"><h1 class="t6" style="margin:0;Margin:0;font-family:Montserrat,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:28px;font-weight:700;font-style:normal;font-size:24px;text-decoration:none;text-transform:none;letter-spacing:-1px;direction:ltr;color:#FFFFFF;text-align:center;mso-line-height-rule:exactly;mso-text-raise:1px;">Спасибо за регистрацию</h1></td></tr></table>
 </td></tr></table>
 </td></tr><tr><td><div class="t11" style="mso-line-height-rule:exactly;mso-line-height-alt:18px;line-height:18px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr><tr><td align="center">
 <table class="t16" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr>
 <!--[if mso]>
-<td width="510" class="t15" style="width:600px;">
+<td width="514" class="t15" style="width:600px;">
 <![endif]-->
 <!--[if !mso]>-->
 <td class="t15" style="width:600px;">
 <!--<![endif]-->
-<table class="t14" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t13"><p class="t12" style="margin:0;Margin:0;font-family:Open Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:25px;font-weight:400;font-style:normal;font-size:15px;text-decoration:none;text-transform:none;letter-spacing:-0.1px;direction:ltr;color:#FFFFFF;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">Это ваш входной билет, пожалуйста, не удаляйте это письмо. QR-код нужно предъявить на входе для участия в розыгрыше ценных призов!</p></td></tr></table>
+<table class="t14" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t13"><p class="t12" style="margin:0;Margin:0;font-family:Open Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:25px;font-weight:400;font-style:normal;font-size:15px;text-decoration:none;text-transform:none;letter-spacing:-0.1px;direction:ltr;color:#FFFFFF;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">Это ваш входной билет, пожалуйста, не удаляйте это письмо. QR-код нужно предъявить на входе для участия в розыгрыше ценных призов!</p></td></tr></table>
 </td></tr></table>
-
-<table><tr>
-    <td align="center">
-        <img src="qrcode.png" alt="Description of image" width="300" height="auto" style="display:block; max-width:100%; border:0; margin-top:20px;">
-    </td>
-</tr></table>
-  
-</td></tr><tr><td align="center">
-<table class="t21" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr>
+</td></tr><tr><td><div class="t18" style="mso-line-height-rule:exactly;mso-line-height-alt:42px;line-height:42px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr><tr><td align="center">
+<table class="t22" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr>
 <!--[if mso]>
-<td width="510" class="t20" style="width:600px;">
+<td width="250" class="t21" style="width:250px;">
 <![endif]-->
 <!--[if !mso]>-->
-<td class="t20" style="width:600px;">
+<td class="t21" style="width:250px;">
 <!--<![endif]-->
-<table class="t19" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t18"><p class="t17" style="margin:0;Margin:0;font-family:Open Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:25px;font-weight:400;font-style:normal;font-size:15px;text-decoration:none;text-transform:none;letter-spacing:-0.1px;direction:ltr;color:#FFFFFF;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;"><br/>Ждём вас 15 апреля в 9:30 по адресу: мкр. Шымсити 101/1, Tulip Hall</p></td></tr></table>
+<table class="t20" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t19"><div style="font-size:0px;"><img class="t17" style="display:block;border:0;height:auto;width:100%;Margin:0;max-width:100%;" width="250" height="250" alt="" src="qrcode.png"/></div></td></tr></table>
+</td></tr></table>
+</td></tr><tr><td><div class="t23" style="mso-line-height-rule:exactly;mso-line-height-alt:42px;line-height:42px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr><tr><td align="center">
+<table class="t28" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr>
+<!--[if mso]>
+<td width="514" class="t27" style="width:600px;">
+<![endif]-->
+<!--[if !mso]>-->
+<td class="t27" style="width:600px;">
+<!--<![endif]-->
+<table class="t26" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t25"><p class="t24" style="margin:0;Margin:0;font-family:Open Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:25px;font-weight:400;font-style:normal;font-size:15px;text-decoration:none;text-transform:none;letter-spacing:-0.1px;direction:ltr;color:#FFFFFF;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">Ждём вас 15 апреля в 9:30 по адресу: мкр. Шымсити 101/1, Tulip Hall</p></td></tr></table>
 </td></tr></table>
 </td></tr></table></td></tr></table>
 </td></tr></table>
-</td></tr><tr><td><div class="t27" style="mso-line-height-rule:exactly;mso-line-height-alt:50px;line-height:50px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr></table></td></tr></table></div><div class="gmail-fix" style="display: none; white-space: nowrap; font: 15px courier; line-height: 0;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</div></body>
+</td></tr><tr><td><div class="t34" style="mso-line-height-rule:exactly;mso-line-height-alt:50px;line-height:50px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr></table></td></tr></table></div><div class="gmail-fix" style="display: none; white-space: nowrap; font: 15px courier; line-height: 0;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</div></body>
 </html>
