--- a/shymkz.html
+++ b/shymkz.html
@@ -110,11 +110,11 @@ text-decoration: none
 </style>
 <style type="text/css">
 @media (max-width: 480px) {
-.t29,.t34{mso-line-height-alt:0px!important;line-height:0!important;display:none!important}.t30{padding:40px!important}.t32{border-radius:0!important}
+.t51,.t56{mso-line-height-alt:0px!important;line-height:0!important;display:none!important}.t52{padding:40px!important}.t54{background-repeat:no-repeat!important;border-radius:0!important}
 }
 </style>
 <!--[if !mso]>-->
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&amp;family=Open+Sans:wght@400&amp;display=swap" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&amp;family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet" type="text/css" />
 <!--<![endif]-->
 <!--[if mso]>
 <xml>
@@ -125,71 +125,43 @@ text-decoration: none
 </xml>
 <![endif]-->
 </head>
-<body id="body" class="t37" style="min-width:100%;Margin:0px;padding:0px;background-color:#FFFFFF;"><div class="t36" style="background-color:#FFFFFF;"><table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" align="center"><tr><td class="t35" style="font-size:0;line-height:0;mso-line-height-rule:exactly;background-color:#FFFFFF;" valign="top" align="center">
+<body id="body" class="t59" style="min-width:100%;Margin:0px;padding:0px;background-color:#FFFFFF;"><div class="t58" style="background-color:#FFFFFF;"><table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" align="center"><tr><td class="t57" style="font-size:0;line-height:0;mso-line-height-rule:exactly;background-color:#FFFFFF;" valign="top" align="center">
 <!--[if mso]>
 <v:background xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false">
 <v:fill color="#FFFFFF"/>
 </v:background>
 <![endif]-->
-<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" align="center" id="innerTable"><tr><td><div class="t29" style="mso-line-height-rule:exactly;mso-line-height-alt:50px;line-height:50px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr><tr><td align="center">
-<table class="t33" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr>
-<!--[if mso]>
-<td width="600" class="t32" style="background-color:#FFFFFF;background-image:url(https://87f3bdc0-298e-45d7-976a-51ab551248e4.b-cdn.net/e/6f404393-f3c5-4f73-b0d4-b6ef38383df4/fa05a6f6-1e85-409f-aadb-5328a3515b91.png);background-repeat:repeat;background-size:cover;background-position:center center;border:1px solid #EBEBEB;overflow:hidden;width:600px;border-radius:3px 3px 3px 3px;">
-<![endif]-->
-<!--[if !mso]>-->
-<td class="t32" style="background-color:#FFFFFF;background-image:url(https://87f3bdc0-298e-45d7-976a-51ab551248e4.b-cdn.net/e/6f404393-f3c5-4f73-b0d4-b6ef38383df4/fa05a6f6-1e85-409f-aadb-5328a3515b91.png);background-repeat:repeat;background-size:cover;background-position:center center;border:1px solid #EBEBEB;overflow:hidden;width:600px;border-radius:3px 3px 3px 3px;">
-<!--<![endif]-->
-<table class="t31" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t30" style="padding:44px 42px 32px 42px;"><table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="width:100% !important;"><tr><td align="center">
-<table class="t4" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr>
-<!--[if mso]>
-<td width="250" class="t3" style="width:250px;">
-<![endif]-->
-<!--[if !mso]>-->
-<td class="t3" style="width:250px;">
-<!--<![endif]-->
+<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" align="center" id="innerTable"><tr><td><div class="t51" style="mso-line-height-rule:exactly;mso-line-height-alt:50px;line-height:50px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr><tr><td align="center">
+<table class="t55" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr><td width="600" class="t54" style="background-color:#FFFFFF;background-image:url(https://f37e3caf-6fdf-4f05-81a0-3d32ff360a4f.b-cdn.net/e/81349d4c-ee1b-4633-a93b-55564faf452c/d481f64c-4d21-457c-afca-44223c422e3d.png);background-repeat:repeat;background-size:cover;background-position:center center;border:1px solid #EBEBEB;overflow:hidden;width:600px;border-radius:3px 3px 3px 3px;">
+<table class="t53" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t52" style="padding:44px 42px 32px 42px;"><table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="width:100% !important;"><tr><td align="center">
+<table class="t4" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr><td width="250" class="t3" style="width:250px;">
 <table class="t2" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t1"><div style="font-size:0px;"><img class="t0" style="display:block;border:0;height:auto;width:100%;Margin:0;max-width:100%;" width="250" height="95.40625" alt="" src="logo.png"/></div></td></tr></table>
 </td></tr></table>
-</td></tr><tr><td><div class="t5" style="mso-line-height-rule:exactly;mso-line-height-alt:42px;line-height:42px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr><tr><td align="center">
-<table class="t10" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr>
-<!--[if mso]>
-<td width="514" class="t9" style="border-bottom:1px solid #EFF1F4;width:600px;">
-<![endif]-->
-<!--[if !mso]>-->
-<td class="t9" style="border-bottom:1px solid #EFF1F4;width:600px;">
-<!--<![endif]-->
-<table class="t8" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t7" style="padding:0 0 18px 0;"><h1 class="t6" style="margin:0;Margin:0;font-family:Montserrat,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:28px;font-weight:700;font-style:normal;font-size:24px;text-decoration:none;text-transform:none;letter-spacing:-1px;direction:ltr;color:#FFFFFF;text-align:center;mso-line-height-rule:exactly;mso-text-raise:1px;">Тіркелгеніңізге рахмет!</h1></td></tr></table>
+</td></tr><tr><td><div class="t5" style="mso-line-height-rule:exactly;mso-line-height-alt:42px;line-height:42px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr><tr><td align="left">
+<table class="t11" role="presentation" cellpadding="0" cellspacing="0" style="Margin-right:auto;"><tr><td width="514" class="t10" style="width:600px;">
+<table class="t9" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t8"><h1 class="t7" style="margin:0;Margin:0;font-family:Roboto,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:34px;font-weight:400;font-style:normal;font-size:28px;text-decoration:none;text-transform:none;direction:ltr;color:#FFFFFF;text-align:left;mso-line-height-rule:exactly;mso-text-raise:2px;"><span class="t6" style="margin:0;Margin:0;font-weight:700;mso-line-height-rule:exactly;">Сәлеметсіз бе!</span></h1></td></tr></table>
 </td></tr></table>
-</td></tr><tr><td><div class="t11" style="mso-line-height-rule:exactly;mso-line-height-alt:18px;line-height:18px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr><tr><td align="center">
-<table class="t16" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr>
-<!--[if mso]>
-<td width="514" class="t15" style="width:600px;">
-<![endif]-->
-<!--[if !mso]>-->
-<td class="t15" style="width:600px;">
-<!--<![endif]-->
-<table class="t14" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t13"><p class="t12" style="margin:0;Margin:0;font-family:Open Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:25px;font-weight:400;font-style:normal;font-size:15px;text-decoration:none;text-transform:none;letter-spacing:-0.1px;direction:ltr;color:#FFFFFF;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">Бұл сіздің кіруге арналған билетіңіз, өтініш осы хатты өшірмеңіз. Ұтыс ойындарында қатысу үшін осы QR кодты кіру есігі алдында көрсету қажет.</p></td></tr></table>
+</td></tr><tr><td align="center">
+<table class="t18" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr><td width="514" class="t17" style="width:600px;">
+<table class="t16" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t15"><p class="t14" style="margin:0;Margin:0;font-family:Open Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:25px;font-weight:400;font-style:normal;font-size:15px;text-decoration:none;text-transform:none;letter-spacing:-0.1px;direction:ltr;color:#FFFFFF;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;"><br/>Ертең <span class="t12" style="margin:0;Margin:0;font-weight:700;mso-line-height-rule:exactly;">біз сізбен жылдың ең ірі шарасы</span> <span class="t13" style="margin:0;Margin:0;font-weight:700;mso-line-height-rule:exactly;"><br/> Шымкенттегі BI Ecosystem-де кездесеміз. </span></p></td></tr></table>
 </td></tr></table>
-</td></tr><tr><td><div class="t18" style="mso-line-height-rule:exactly;mso-line-height-alt:42px;line-height:42px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr><tr><td align="center">
-<table class="t22" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr>
-<!--[if mso]>
-<td width="250" class="t21" style="width:250px;">
-<![endif]-->
-<!--[if !mso]>-->
-<td class="t21" style="width:250px;">
-<!--<![endif]-->
-<table class="t20" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t19"><div style="font-size:0px;"><img class="t17" style="display:block;border:0;height:auto;width:100%;Margin:0;max-width:100%;" width="250" height="250" alt="" src="qrcode.png"/></div></td></tr></table>
+</td></tr><tr><td align="center">
+<table class="t27" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr><td width="514" class="t26" style="width:600px;">
+<table class="t25" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t24"><p class="t23" style="margin:0;Margin:0;font-family:Open Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:25px;font-weight:400;font-style:normal;font-size:15px;text-decoration:none;text-transform:none;letter-spacing:-0.1px;direction:ltr;color:#FFFFFF;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;"><br/>📍 <span class="t19" style="margin:0;Margin:0;font-weight:700;mso-line-height-rule:exactly;">Өтетін орны:</span> Tulip Hall <br/>📅 <span class="t20" style="margin:0;Margin:0;font-weight:700;mso-line-height-rule:exactly;">Күні: </span>19 сәуір <br/>⏰ <span class="t21" style="margin:0;Margin:0;font-weight:700;mso-line-height-rule:exactly;">Қонақтар сағ.</span> 09:00-ден бастап жиналады <br/>📍<span class="t22" style="margin:0;Margin:0;font-weight:700;mso-line-height-rule:exactly;"> Мекенжайы:</span> Алатау батыр көшесі, 101/1 (Tulip Hall)</p></td></tr></table>
 </td></tr></table>
-</td></tr><tr><td><div class="t23" style="mso-line-height-rule:exactly;mso-line-height-alt:42px;line-height:42px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr><tr><td align="center">
-<table class="t28" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr>
-<!--[if mso]>
-<td width="514" class="t27" style="width:600px;">
-<![endif]-->
-<!--[if !mso]>-->
-<td class="t27" style="width:600px;">
-<!--<![endif]-->
-<table class="t26" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t25"><p class="t24" style="margin:0;Margin:0;font-family:Open Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:25px;font-weight:400;font-style:normal;font-size:15px;text-decoration:none;text-transform:none;letter-spacing:-0.1px;direction:ltr;color:#FFFFFF;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">Сiзді 19 сәуір күні сағат 09:00 Шымкент қаласы,  "Шымсити" ықшам ауданы, 101/1 Tulip Hall, мекен жайы бойынша күтеміз.</p></td></tr></table>
+</td></tr><tr><td align="center">
+<table class="t35" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr><td width="514" class="t34" style="width:600px;">
+<table class="t33" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t32"><p class="t31" style="margin:0;Margin:0;font-family:Open Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:25px;font-weight:400;font-style:normal;font-size:15px;text-decoration:none;text-transform:none;letter-spacing:-0.1px;direction:ltr;color:#FFFFFF;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;"><span class="t29" style="margin:0;Margin:0;mso-line-height-rule:exactly;"><span class="t28" style="margin:0;Margin:0;font-weight:700;font-style:normal;mso-line-height-rule:exactly;"><br/>Маңызды!</span></span> Бұл хатты өшірмеңіз, төменде билетіңіз бар. <span class="t30" style="margin:0;Margin:0;font-weight:700;mso-line-height-rule:exactly;"><br/>Кірер кезде билет көрсетуіңіз керек!</span></p></td></tr></table>
+</td></tr></table>
+</td></tr><tr><td><div class="t37" style="mso-line-height-rule:exactly;mso-line-height-alt:42px;line-height:42px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr><tr><td align="center">
+<table class="t41" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr><td width="250" class="t40" style="width:250px;">
+<table class="t39" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t38"><div style="font-size:0px;"><img class="t36" style="display:block;border:0;height:auto;width:100%;Margin:0;max-width:100%;" width="250" height="250" alt="" src="qrcode.png"/></div></td></tr></table>
+</td></tr></table>
+</td></tr><tr><td><div class="t42" style="mso-line-height-rule:exactly;mso-line-height-alt:42px;line-height:42px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr><tr><td align="center">
+<table class="t50" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;"><tr><td width="514" class="t49" style="width:600px;">
+<table class="t48" role="presentation" cellpadding="0" cellspacing="0" width="100%" style="width:100%;"><tr><td class="t47"><p class="t46" style="margin:0;Margin:0;font-family:Open Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:25px;font-weight:400;font-style:normal;font-size:15px;text-decoration:none;text-transform:none;letter-spacing:-0.1px;direction:ltr;color:#FFFFFF;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;"><span class="t43" style="margin:0;Margin:0;font-weight:700;mso-line-height-rule:exactly;">Сізді не күтеді: </span><br/>🔸 4Seasons. Dream және Flora Gardens-2 жобаларында пәтер сатып алудың арнайы талаптары! <br/>🔸 Тікелей сол жерде өтетін керемет жүлделер ұтысы! <br/>🔸 Шабыт беретін спикерлер BI Group-тың озық жобалары туралы әңгімелейді<br/>🔸 BI атмосферасына толық бойлау, бұл — тек жылжымайтын мүлік қана емес, жайлылық пен қауымдастық туралы.<br/><br/> 👨‍👩‍👧‍👦  Достарыңызбен немесе туыстарыңызбен келгіңіз келе ме? Тамаша!<br/>Олар да 👉 https://biecosystem.kz/ru сілтемесі бойынша тіркеліп, сізге қосыла алады. <br/><br/>сілтемесі бойынша тіркеліп, сізге қосыла алады.<br/><br/><span class="t44" style="margin:0;Margin:0;font-weight:400;mso-line-height-rule:exactly;">Сүйіспеншілікпен, <br/></span><span class="t45" style="margin:0;Margin:0;font-weight:700;mso-line-height-rule:exactly;">BI Group командасы.</span></p></td></tr></table>
 </td></tr></table>
 </td></tr></table></td></tr></table>
 </td></tr></table>
-</td></tr><tr><td><div class="t34" style="mso-line-height-rule:exactly;mso-line-height-alt:50px;line-height:50px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr></table></td></tr></table></div><div class="gmail-fix" style="display: none; white-space: nowrap; font: 15px courier; line-height: 0;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</div></body>
+</td></tr><tr><td><div class="t56" style="mso-line-height-rule:exactly;mso-line-height-alt:50px;line-height:50px;font-size:1px;display:block;">&nbsp;&nbsp;</div></td></tr></table></td></tr></table></div><div class="gmail-fix" style="display: none; white-space: nowrap; font: 15px courier; line-height: 0;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</div></body>
 </html>
